--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,47 @@
+amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.7.0
 asgiref==3.8.1
+atproto==0.0.56
+billiard==4.2.1
+black==24.10.0
+celery==5.4.0
+certifi==2024.8.30
 cffi==1.17.1
-cryptography==44.0.0
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cryptography==43.0.3
 Django==5.1.3
 django-browser-reload==1.17.0
 django-environ==0.11.2
+dnspython==2.7.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.27.2
+idna==3.10
+kombu==5.4.2
+libipld==3.0.0
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.6
+prompt_toolkit==3.0.48
 psycopg2==2.9.10
 pycparser==2.22
+pydantic==2.10.3
+pydantic_core==2.27.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
+redis==5.2.1
+six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.2
+typeguard==4.4.1
+typing_extensions==4.12.2
+tzdata==2024.2
+vine==5.1.0
+wcwidth==0.2.13
+websockets==13.1
