--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,13 @@ click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+cron-descriptor==1.4.5
 cryptography==43.0.3
 Django==5.1.3
 django-browser-reload==1.17.0
+django-celery-beat==2.7.0
 django-environ==0.11.2
+django-timezone-field==7.0
 dnspython==2.7.0
 h11==0.14.0
 httpcore==1.0.7
@@ -32,6 +35,7 @@ psycopg2==2.9.10
 pycparser==2.22
 pydantic==2.10.3
 pydantic_core==2.27.1
+python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
