--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ cryptography==43.0.3
 Django==5.1.3
 django-browser-reload==1.17.0
 django-celery-beat==2.7.0
+django-celery-results==2.5.1
 django-environ==0.11.2
 django-timezone-field==7.0
 dnspython==2.7.0
@@ -32,6 +33,7 @@ pathspec==0.12.1
 platformdirs==4.3.6
 prompt_toolkit==3.0.48
 psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pycparser==2.22
 pydantic==2.10.3
 pydantic_core==2.27.1
