--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,12 +22,16 @@ services:
     depends_on:
       - redis
     env_file:
-      - .env
+      - .env.prod
 
   web:
     build: .
     command: >  
-      sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000" # gunicorn autoblue_django.wsgi:application --bind 0.0.0.0:8000
+      sh -c "
+        python manage.py collectstatic --noinput &&
+        python manage.py migrate &&
+        gunicorn autoblue_django.wsgi:application --bind 0.0.0.0:8000
+      " 
     volumes:
       - .:/app
     ports:
