--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ django-celery-results==2.5.1
 django-environ==0.11.2
 django-timezone-field==7.0
 dnspython==2.7.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
@@ -32,6 +33,7 @@ packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.6
 prompt_toolkit==3.0.48
+psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pycparser==2.22
 pydantic==2.10.3
