--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -5,32 +5,49 @@ on:
     branches: [main]
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Build Docker image
-        docker build -t your-image-name .
+      # - name: Log in to Docker Hub
+      #   run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      # - name: 'Login to GitHub Container Registry'
-      #     uses: docker/login-action@v1
-      #     with:
-      
-      # - name: Push Docker image
-      #   run: docker push your-image-name
+      # - name: Build and push Docker image
+      #   run: |
+      #     docker build \
+      #       --build-arg DJANGO_SETTINGS_MODULE=${{ secrets.DJANGO_SETTINGS_MODULE }} \
+      #       --build-arg SECRET_KEY=${{ secrets.SECRET_KEY }} \
+      #       --build-arg DB_NAME=${{ secrets.DB_NAME }} \
+      #       --build-arg DB_USER=${{ secrets.DB_USER }} \
+      #       --build-arg DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+      #       --build-arg DB_HOST=${{ secrets.DB_HOST }} \
+      #       --build-arg DB_PORT=${{ secrets.DB_PORT }} \
+      #       --build-arg ENCRYPTION_KEY=${{ secrets.ENCRYPTION_KEY }} \
+      #       --build-arg REDIS_HOST=${{ secrets.REDIS_HOST }} \
+      #       -t your-dockerhub-user/your-image-name:latest .
 
-      # - name: Deploy to server
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.SERVER_HOST }}
-      #     username: ${{ secrets.SERVER_USERNAME }}
-      #     key: ${{ secrets.SERVER_SSH_KEY }}
-      #     script: |
-      #       docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-      #       docker pull your-image-name
-      #       docker stop your-container-name || true
-      #       docker rm your-container-name || true
-      #       docker run -d -p 8000:8000 --name your-container-name your-image-name
+      # - name: Push Docker image to Docker Hub
+      #   run: docker push your-dockerhub-user/your-image-name:latest
+
+      # - name: Deploy to production
+      #   run: |
+      #     sshpass -p "${{ secrets.PRODUCTION_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.PRODUCTION_USER }}@${{ secrets.PRODUCTION_HOST }} << EOF
+      #     docker pull your-dockerhub-user/your-image-name:latest
+      #     docker stop your-container-name || true
+      #     docker rm your-container-name || true
+      #     docker run -d \
+      #       --name your-container-name \
+      #       -p 8000:8000 \
+      #       --env DJANGO_SETTINGS_MODULE=${{ secrets.DJANGO_SETTINGS_MODULE }} \
+      #       --env SECRET_KEY=${{ secrets.SECRET_KEY }} \
+      #       --env DB_NAME=${{ secrets.DB_NAME }} \
+      #       --env DB_USER=${{ secrets.DB_USER }} \
+      #       --env DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+      #       --env DB_HOST=${{ secrets.DB_HOST }} \
+      #       --env DB_PORT=${{ secrets.DB_PORT }} \
+      #       --env ENCRYPTION_KEY=${{ secrets.ENCRYPTION_KEY }} \
+      #       --env REDIS_HOST=${{ secrets.REDIS_HOST }} \
+      #       your-dockerhub-user/your-image-name:latest
+      #     EOF
