--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 services:
-
   db:
     image: postgres:15
     environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: $${DB_USER}
+      POSTGRES_PASSWORD: $${DB_PASSWORD}
+      POSTGRES_DB: $${DB_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
@@ -16,32 +15,30 @@ services:
 
   celery:
     build: .
-    command: ["celery", "-A", "auto_app.celery:app", "worker", "--loglevel=info"]
+    command:
+      ["celery", "-A", "auto_app.celery:app", "worker", "--loglevel=info"]
     volumes:
       - .:/app
     depends_on:
       - redis
     env_file:
       - .env.prod
+      
 
   web:
-    build: .
-    command: >  
-      sh -c "
-        python manage.py collectstatic --noinput &&
-        python manage.py migrate &&
-        gunicorn autoblue_django.wsgi:application --bind 0.0.0.0:8000
-      " 
+    build:
+      context: .
     volumes:
       - .:/app
     ports:
       - "8000:8000"
     env_file:
-      - .env
+      - .env.prod
     depends_on:
       - redis
       - db
-      
+    entrypoint: ["/app/entrypoint.sh"]
+
 volumes:
   postgres_data:
   redis_data:
