--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,23 @@
 services:
+  web:
+    build:
+      context: .
+    volumes:
+      - .:/app
+      - ./static:/staticfiles 
+    ports:
+      - 8000:8000
+    env_file:
+      - .env.prod
+    depends_on:
+      - db
+    entrypoint: ["/app/entrypoint.sh"]
+
   db:
+    restart: always
     image: postgres:15
-    environment:
-      POSTGRES_USER: $${DB_USER}
-      POSTGRES_PASSWORD: $${DB_PASSWORD}
-      POSTGRES_DB: $${DB_NAME}
+    env_file:
+      - .env.prod
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
@@ -23,22 +36,19 @@ services:
       - redis
     env_file:
       - .env.prod
-      
-
-  web:
-    build:
-      context: .
+  
+  nginx:
+    image: nginx:latest
     volumes:
-      - .:/app
+      - ./nginx.conf:/etc/nginx/nginx.conf  
+      - ./static:/staticfiles
     ports:
-      - "8000:8000"
-    env_file:
-      - .env.prod
+      - "80:80" 
     depends_on:
-      - redis
-      - db
-    entrypoint: ["/app/entrypoint.sh"]
+      - web 
 
 volumes:
   postgres_data:
   redis_data:
+  static:
+  nginx.conf:
