--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,15 +21,19 @@ jobs:
         run: |
 
           docker build \
+          --build-arg DJANGO_ENV="${{ secrets.DJANGO_ENV }}"\
             --build-arg DJANGO_SETTINGS_MODULE="${{ secrets.DJANGO_SETTINGS_MODULE }}"\
             --build-arg SECRET_KEY="${{ secrets.SECRET_KEY }}"\
+            --build-arg ENCRYPTION_KEY="${{ secrets.ENCRYPTION_KEY }}" \
+            --build-arg ALLOWED_HOSTS="${{ secrets.ALLOWED_HOSTS }}" \
+            --build-arg REDIS_HOST="${{ secrets.REDIS_HOST }}" \
             --build-arg DB_NAME="${{ secrets.DB_NAME }}"\
             --build-arg DB_USER="${{ secrets.DB_USER }}" \
-            --build-arg DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
             --build-arg DB_HOST="${{ secrets.DB_HOST }}" \
+            --build-arg DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
             --build-arg DB_PORT="${{ secrets.DB_PORT }}" \
-            --build-arg ENCRYPTION_KEY="${{ secrets.ENCRYPTION_KEY }}" \
-            --build-arg REDIS_HOST="${{ secrets.REDIS_HOST }}" \
+            --build-arg DATABASE="${{ secrets.DATABASE }}" \
+            --build-arg POSTGRES_PASSWORD="${{ secrets.POSTGRES_PASSWORD }}" \
             -t yassinecodes/autoblue:latest .
 
       - name: Push Docker image to Docker Hub
