--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - ./static:/staticfiles 
     ports:
       - 8000:8000
-    # env_file:
-    #   - .env.prod
+    env_file:
+      - .env.prod
     depends_on:
       - db
       - redis
@@ -17,8 +17,8 @@ services:
   db:
     restart: always
     image: postgres:15
-    # env_file:
-    #   - .env.prod
+    env_file:
+      - .env.prod
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
