added image tag to web service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   web:
     build:
       context: .
+    image: yassinecodes/autoblue:latest 
     volumes:
       - .:/app
       - ./static:/staticfiles 
