added custom img for nginx

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,8 @@
 nodaemon=true
 
 [program:nginx]
-command=/usr/sbin/nginx -g "daemon off;"
+# command=/usr/sbin/nginx -g "daemon off;"
+command=nginx -g daemon off
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
