--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,11 @@ jobs:
       - name: Push Docker Compose services
         run: |
           docker compose -f docker-compose.yml push
+    
+      - name: Set up SSH for deployment
+        uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Deploy to production using Docker Compose
         run: |
