--- a/supervisord.conf
+++ b/supervisord.conf
@@ -12,7 +12,7 @@ stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 
 [program:gunicorn]
-command=gunicorn autoblue_django.wsgi:application --bind 0.0.0.0:8000 --workers=3 --threads=4
+command=gunicorn autoblue_django.wsgi:application --bind 0.0.0.0:8000
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
