--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,7 +1,7 @@
 FROM nginx:latest
 
 # Copy your custom nginx.conf into the correct location
-COPY nginx.prod.conf /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/nginx.conf
 
 # Copy static files into the container
 COPY static /staticfiles
