--- a/nginx.conf
+++ b/nginx.conf
@@ -65,7 +65,8 @@ http {
 
         # Proxy pass to Django (Gunicorn)
         location / {
-            proxy_pass http://127.0.0.1:8000;  # Adjust to your app's port
+            # proxy_pass http://127.0.0.1:8000;  # Adjust to your app's port
+            proxy_pass http://web:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
