--- a/nginx.conf
+++ b/nginx.conf
@@ -34,14 +34,14 @@
 # ##### production ########
 # ##### production ########
 
-# user nginx;
-# worker_processes auto;
-# error_log /var/log/nginx/error.log warn;
-# pid /var/run/nginx.pid;
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
-# events {
-#     worker_connections 1024;
-# }
+events {
+    worker_connections 1024;
+}
 
 http {
     include /etc/nginx/mime.types;
