--- a/nginx.conf
+++ b/nginx.conf
@@ -1,39 +1,3 @@
-# user nginx;
-# worker_processes auto;
-# error_log /var/log/nginx/error.log warn;
-# pid /var/run/nginx.pid;
-
-# events {
-#     worker_connections 1024;
-# }
-
-# http {
-#     include /etc/nginx/mime.types;
-#     default_type application/octet-stream;
-#     sendfile on;
-#     keepalive_timeout 65;
-
-#     server {
-#         listen 80;
-#         server_name localhost;
-
-#         location / {
-#             proxy_pass http://web:8000;
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         }
-
-#         location /static/ {
-#             alias /staticfiles/;
-#         }
-#     }
-# }
-
-
-# ##### production ########
-# ##### production ########
-
 user nginx;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -66,8 +30,8 @@ http {
         # Proxy pass to Django (Gunicorn)
         location / {
             # proxy_pass http://127.0.0.1:8000;  # Adjust to your app's port
-            # proxy_pass http://web:8000;
-            proxy_pass http://unix:/run/gunicorn.sock;
+            # proxy_pass http://unix:/run/gunicorn.sock;
+            proxy_pass http://web;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
