--- a/nginx.conf
+++ b/nginx.conf
@@ -22,16 +22,11 @@ http {
         listen 80;
         server_name autoblue.yassinecodes.dev www.autoblue.yassinecodes.dev;
 
-        # Redirect www to non-www version
-        if ($host = 'www.autoblue.yassinecodes.dev') {
-            return 301 http://autoblue.yassinecodes.dev$request_uri;
-        }
-
         # Proxy pass to Django (Gunicorn)
         location / {
-            # proxy_pass http://127.0.0.1:8000;  # Adjust to your app's port
+            # proxy_pass http://127.0.0.1:8000; 
             # proxy_pass http://unix:/run/gunicorn.sock;
-            proxy_pass http://web;
+            proxy_pass http://home-web-1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -42,11 +37,6 @@ http {
         location /static/ {
             alias /staticfiles/;
         }
-
-        # # Serve media files
-        # location /media/ {
-        #     alias /mediafiles/;
-        # }
 
         # Security headers
         add_header X-Content-Type-Options "nosniff";
