--- a/nginx.conf
+++ b/nginx.conf
@@ -24,9 +24,7 @@ http {
 
         # Proxy pass to Django (Gunicorn)
         location / {
-            # proxy_pass http://127.0.0.1:8000; 
-            # proxy_pass http://unix:/run/gunicorn.sock;
-            proxy_pass http://home-web-1;
+            proxy_pass http://web;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
