--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ http {
 
         # Proxy pass to Django (Gunicorn)
         location / {
-            proxy_pass http://web;
+            proxy_pass http://web:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
