--- a/nginx.conf
+++ b/nginx.conf
@@ -18,13 +18,17 @@ http {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
+    upstream autoblue {
+        server web:8000;
+    }
+    
     server {
         listen 80;
         server_name autoblue.yassinecodes.dev www.autoblue.yassinecodes.dev;
 
         # Proxy pass to Django (Gunicorn)
         location / {
-            proxy_pass http://web:8000;
+            proxy_pass http://autoblue;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
