updated nginx conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,12 +18,11 @@ http {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
+    # Redirect all HTTP requests to HTTPS
     server {
         listen 80;
         server_name autoblue.yassinecodes.dev;
-
-        # Redirect all HTTP requests to HTTPS
-        return 301 https://$host$request_uri;
+        return 301 https://autoblue.yassinecodes.dev$request_uri;
     }
     
     server {
@@ -38,7 +37,7 @@ http {
 
         # Proxy pass to Django (Gunicorn)
         location / {
-            proxy_pass https://web;
+            proxy_pass http://web;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -51,13 +50,17 @@ http {
         }
 
         # Redirect www to non-www
-        # if ($host = www.autoblue.yassinecodes.dev) {
-        #     return 301 https://autoblue.yassinecodes.dev$request_uri;
-        # }
+        if ($host = www.autoblue.yassinecodes.dev) {
+            return 301 https://autoblue.yassinecodes.dev$request_uri;
+        }
 
         # Security headers
         add_header X-Content-Type-Options "nosniff";
         add_header X-Frame-Options "DENY";
         add_header X-XSS-Protection "1; mode=block";
+
+        # logs
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log warn;
     }
 }
