--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-user nginx;
+# user nginx;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -18,16 +18,36 @@ http {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # Redirect all HTTP requests to HTTPS
+    # Redirect all HTTP requests to HTTPS non-www
     server {
         listen 80;
         server_name autoblue.yassinecodes.dev;
+        return 301 https://$host$request_uri;
+    }
+
+    # Redirect HTTP www to HTTPS non-www
+    server {
+        listen 80;
+        server_name www.autoblue.yassinecodes.dev;
         return 301 https://autoblue.yassinecodes.dev$request_uri;
     }
-    
-    server {
 
+    # Redirect HTTPS www to non-www
+    server {
         listen 443 ssl;
+        server_name www.autoblue.yassinecodes.dev;
+
+        ssl_certificate /etc/letsencrypt/live/autoblue.yassinecodes.dev/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/autoblue.yassinecodes.dev/privkey.pem;
+
+        return 301 https://autoblue.yassinecodes.dev$request_uri;
+    }
+
+    # Main server block
+    server {
+        listen 443 ssl;
+        server_name autoblue.yassinecodes.dev;
+
         ssl_certificate /etc/letsencrypt/live/autoblue.yassinecodes.dev/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/autoblue.yassinecodes.dev/privkey.pem;
 
@@ -37,7 +57,7 @@ http {
 
         # Proxy pass to Django (Gunicorn)
         location / {
-            proxy_pass http://web;
+            proxy_pass http://web;  # Ensure Gunicorn runs HTTP
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -49,17 +69,11 @@ http {
             alias /staticfiles/;
         }
 
-        # Redirect www to non-www
-        if ($host = www.autoblue.yassinecodes.dev) {
-            return 301 https://autoblue.yassinecodes.dev$request_uri;
-        }
-
         # Security headers
         add_header X-Content-Type-Options "nosniff";
         add_header X-Frame-Options "DENY";
         add_header X-XSS-Protection "1; mode=block";
 
-        # logs
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log warn;
     }
