--- a/nginx.conf
+++ b/nginx.conf
@@ -57,7 +57,7 @@ http {
 
         # Proxy pass to Django (Gunicorn)
         location / {
-            proxy_pass http://web;  # Ensure Gunicorn runs HTTP
+            proxy_pass http://172.18.0.5:8000;  # Ensure Gunicorn runs HTTP
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
