added nginx wwww redirect

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,30 +18,14 @@ http {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # # Redirect all HTTP requests to HTTPS non-www
-    # server {
-    #     listen 80;
-    #     server_name autoblue.yassinecodes.dev;
-    #     return 301 https://$host$request_uri;
-    # }
+    server {
+        listen 80;
+        server_name www.autoblue.yassinecodes.dev;
 
-    # # Redirect HTTP www to HTTPS non-www
-    # server {
-    #     listen 80;
-    #     server_name www.autoblue.yassinecodes.dev;
-    #     return 301 https://autoblue.yassinecodes.dev$request_uri;
-    # }
+        # Redirect to non-www version
+        return 301 autoblue.yassinecodes.dev$request_uri;
+    }
 
-    # # Redirect HTTPS www to non-www
-    # server {
-    #     listen 443 ssl;
-    #     server_name www.autoblue.yassinecodes.dev;
-
-    #     ssl_certificate /etc/letsencrypt/live/autoblue.yassinecodes.dev/fullchain.pem;
-    #     ssl_certificate_key /etc/letsencrypt/live/autoblue.yassinecodes.dev/privkey.pem;
-
-    #     return 301 https://autoblue.yassinecodes.dev$request_uri;
-    # }
 
     # Main server block
     server {
