--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DJANGO_ENV=development # export DJANGO_ENV=development
 DJANGO_SETTINGS_MODULE=autoblue_django.settings.dev
-SECRET_KEY=gdin5!f%_a9$)qb5wb_m)r1w@-gr4j)a7*c0@+*cpcs16xjh9c
+SECRET_KEY=django-insecure-0w6sv91+o!te29zs*$@#d4lxz1k52#p+w&vp102(wbux$c&usb # if doesn't work generate your own
 ENCRYPTION_KEY=Your_encryption_key
 REDIS_HOST=localhost
 DB_USER=Your_db_User
